--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -225,7 +225,9 @@ language_extensions:
 - FunctionalDependencies
 - LambdaCase
 - MultiParamTypeClasses
+- MultiWayIf
 - NamedFieldPuns
+- ScopedTypeVariables
 - TypeFamilies
 - ViewPatterns
   # - TemplateHaskell
