--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ default-extensions:
 - FlexibleInstances
 - FunctionalDependencies
 - LambdaCase
+- MultiWayIf
 - NamedFieldPuns
 - ScopedTypeVariables
 - StandaloneDeriving
@@ -36,6 +37,7 @@ dependencies:
 - base >= 4.7 && < 5
 - constraints
 - containers
+- mtl
 - pointless-fun
 - reflection
 
