--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -220,6 +220,7 @@ newline: native
 #
 # No language extensions are enabled by default.
 language_extensions:
+- ConstraintKinds
 - ExistentialQuantification
 - FlexibleContexts
 - FunctionalDependencies
