--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ default-extensions:
 - FlexibleContexts
 - FlexibleInstances
 - FunctionalDependencies
+- GeneralizedNewtypeDeriving
 - LambdaCase
 - NamedFieldPuns
 - Rank2Types
@@ -39,6 +40,8 @@ dependencies:
 - constraints
 - containers
 - dlist
+- MissingH
+- monad-loops
 - mtl
 - pcg-random
 - pointless-fun
