--- a/stack.yaml
+++ b/stack.yaml
@@ -37,12 +37,17 @@ resolver: lts-10.6
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
+- location:
+    git: https://github.com/TerrorJack/memo-hashtables.git
+    commit: 079d8f52f3ae011b7f13336dde2ae0284c73b43e
+  extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
 - pcg-random-0.1.3.4
 
+allow-newer: true
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
