--- a/stack.yaml
+++ b/stack.yaml
@@ -38,8 +38,8 @@ resolver: lts-10.6
 packages:
 - .
 - location:
-    git: https://github.com/TerrorJack/memo-hashtables.git
-    commit: 079d8f52f3ae011b7f13336dde2ae0284c73b43e
+    git: https://github.com/davidspies/memo-hashtables
+    commit: c8bd9f563535176cec3ade6d601ff3c7608a9652
   extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -47,7 +47,6 @@ packages:
 extra-deps:
 - pcg-random-0.1.3.4
 
-allow-newer: true
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
