--- a/stack.yaml
+++ b/stack.yaml
@@ -11,11 +11,13 @@
 # resolver: lts-3.5
 # resolver: nightly-2015-09-21
 # resolver: ghc-7.10.2
-# resolver: ghcjs-0.1.0_ghc-7.10.2
-# resolver:
-#  name: custom-snapshot
-#  location: "./custom-snapshot.yaml"
-resolver: lts-11.1
+#
+# The location of a snapshot can be provided as a file or url. Stack assumes
+# a snapshot provided as a file might change, whereas a url resource does not.
+#
+# resolver: ./custom-snapshot.yaml
+# resolver: https://example.com/snapshots/2018-01-01.yaml
+resolver: https://raw.githubusercontent.com/davidspies/snapshots/master/dspies-snapshot-4.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -27,26 +29,18 @@ resolver: lts-11.1
 #    git: https://github.com/commercialhaskell/stack.git
 #    commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 # - location: https://github.com/commercialhaskell/stack/commit/e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#   extra-dep: true
 #  subdirs:
 #  - auto-update
 #  - wai
-#
-# A package marked 'extra-dep: true' will only be built if demanded by a
-# non-dependency (i.e. a user package), and its test suites and benchmarks
-# will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
-- location:
-    git: https://github.com/davidspies/memo-hashtables
-    commit: c8bd9f563535176cec3ade6d601ff3c7608a9652
-  extra-dep: true
 # Dependency packages to be pulled from upstream that are not in the resolver
+# using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
-- pcg-random-0.1.3.4
-
+- git: https://github.com/davidspies/memo-hashtables
+  commit: c8bd9f563535176cec3ade6d601ff3c7608a9652
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
@@ -58,7 +52,7 @@ extra-deps:
 #
 # Require a specific version of stack, using version ranges
 # require-stack-version: -any # Default
-# require-stack-version: ">=1.6"
+# require-stack-version: ">=1.9"
 #
 # Override the architecture used by stack, especially useful on Windows
 # arch: i386
@@ -70,6 +64,3 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-
-nix:
-  enable: true
